# PlantCare.API/PlantCare.API.Client/swagger.json
@@ -5,7 +5,7 @@
     "version": "1.0"
   },
   "paths": {
-    "/api/distributer": {
+    "/api/distributor": {
       "get": {
         "tags": [
           "Distributor"
@@ -16,17 +16,26 @@
             "content": {
               "text/plain": {
                 "schema": {
-                  "type": "boolean"
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/PlantCare.Queries.Responses.Distributor.Distributor"
+                  }
                 }
               },
               "application/json": {
                 "schema": {
-                  "type": "boolean"
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/PlantCare.Queries.Responses.Distributor.Distributor"
+                  }
                 }
               },
               "text/json": {
                 "schema": {
-                  "type": "boolean"
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/PlantCare.Queries.Responses.Distributor.Distributor"
+                  }
                 }
               }
             }
@@ -120,7 +129,7 @@
         }
       }
     },
-    "/api/distributer/{id}": {
+    "/api/distributor/{id}": {
       "get": {
         "tags": [
           "Distributor"
@@ -142,17 +151,17 @@
             "content": {
               "text/plain": {
                 "schema": {
-                  "type": "boolean"
+                  "$ref": "#/components/schemas/PlantCare.Queries.Responses.Distributor.Distributor"
                 }
               },
               "application/json": {
                 "schema": {
-                  "type": "boolean"
+                  "$ref": "#/components/schemas/PlantCare.Queries.Responses.Distributor.Distributor"
                 }
               },
               "text/json": {
                 "schema": {
-                  "type": "boolean"
+                  "$ref": "#/components/schemas/PlantCare.Queries.Responses.Distributor.Distributor"
                 }
               }
             }
@@ -180,7 +189,7 @@
         }
       }
     },
-    "/api/distributer/{id}/{plantId}/water-supply": {
+    "/api/distributor/{id}/{plantId}/water-supply": {
       "post": {
         "tags": [
           "Distributor"
@@ -1635,6 +1644,21 @@
         ],
         "type": "integer",
         "format": "int32"
+      },
+      "PlantCare.Queries.Responses.Distributor.Distributor": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32",
+            "readOnly": true
+          },
+          "name": {
+            "type": "string",
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
       },
       "PlantCare.Queries.Responses.HumidityMeasurements.HumidityMeasurement": {
         "type": "object",
